scrollbar fixed 2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body, html {
   width: 100%;
   min-height: 100%;
   margin: 0 auto;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 100vh;
 }
 
